[#354] Feat: 가설 판정
